lab/packager/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: packager
  labels:
    app: packager
    owner: tonyhhyip
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: packager
        owner: tonyhhyip
    spec:
      containers:
        - name: npm-packager
          image: verdaccio/verdaccio:2.6.6
          volumeMounts:
            - name: storage
              mountPath: /verdaccio/storage
            - name: conf
              mountPath: /verdaccio/conf
          ports:
            - containerPort: 4873
      volumes:
        - name: storage
          azureFile:
            secretName: lab-files
            shareName: npm
            readOnly: false
        - name: conf
          configMap:
            name: packager-npm-conf
